--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - .env  # Use environment variables from .env file if it exists
     environment:
       # Default API key if not provided in .env
-      - OPENROUTER_API_KEY=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
+      - OPENROUTER_API_KEY= 'ADD your key'
       - LOG_LEVEL=INFO
     volumes:
       - ./src:/app/src
